tests/op_assignment/op_assignment.exp
Error ----------------------------------------------------------------------------------------------------- test.js:37:3

Cannot reassign constant `x` [1]. [reassign-const]

   test.js:37:3
   37|   x += 2; // Error: cannot reassign constant
         ^

References:
   test.js:36:9
   36|   const x = 1;
               ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:38:3

Cannot reassign constant `x` [1]. [reassign-const]

   test.js:38:3
   38|   x -= 2; // Error: cannot reassign constant
         ^

References:
   test.js:36:9
   36|   const x = 1;
               ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:39:3

Cannot reassign constant `x` [1]. [reassign-const]

   test.js:39:3
   39|   x *= 2; // Error: cannot reassign constant
         ^

References:
   test.js:36:9
   36|   const x = 1;
               ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:40:3

Cannot reassign constant `x` [1]. [reassign-const]

   test.js:40:3
   40|   x /= 2; // Error: cannot reassign constant
         ^

References:
   test.js:36:9
   36|   const x = 1;
               ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:41:3

Cannot reassign constant `x` [1]. [reassign-const]

   test.js:41:3
   41|   x **= 2; // Error: cannot reassign constant
         ^

References:
   test.js:36:9
   36|   const x = 1;
               ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:42:3

Cannot reassign constant `x` [1]. [reassign-const]

   test.js:42:3
   42|   x %= 2; // Error: cannot reassign constant
         ^

References:
   test.js:36:9
   36|   const x = 1;
               ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:48:3

Cannot reassign constant `sx` [1]. [reassign-const]

   test.js:48:3
   48|   sx += "b"; // Error: cannot reassign constant
         ^^

References:
   test.js:47:9
   47|   const sx = "a";
               ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:54:5

Cannot update `o.p` because property `p` is not writable. [cannot-write]

   54|   o.p += 2; // Error: property is non-writable
           ^


Error ----------------------------------------------------------------------------------------------------- test.js:55:5

Cannot update `o.p` because property `p` is not writable. [cannot-write]

   55|   o.p -= 2; // Error: property is non-writable
           ^


Error ----------------------------------------------------------------------------------------------------- test.js:56:5

Cannot update `o.p` because property `p` is not writable. [cannot-write]

   56|   o.p *= 2; // Error: property is non-writable
           ^


Error ----------------------------------------------------------------------------------------------------- test.js:57:5

Cannot update `o.p` because property `p` is not writable. [cannot-write]

   57|   o.p /= 2; // Error: property is non-writable
           ^


Error ----------------------------------------------------------------------------------------------------- test.js:58:5

Cannot update `o.p` because property `p` is not writable. [cannot-write]

   58|   o.p **= 2; // Error: property is non-writable
           ^


Error ----------------------------------------------------------------------------------------------------- test.js:59:5

Cannot update `o.p` because property `p` is not writable. [cannot-write]

   59|   o.p %= 2; // Error: property is non-writable
           ^


Error ----------------------------------------------------------------------------------------------------- test.js:65:5

Cannot update `o.p` because property `p` is not writable. [cannot-write]

   65|   o.p += "b"; // Error: property is non-writable
           ^


Error ----------------------------------------------------------------------------------------------------- test.js:71:5

Cannot get `o.p` because property `p` is not readable. [cannot-read]

   71|   o.p += 2; // Error: property is non-readable
           ^



Found 15 errors
